[package]
name = "crdts"
description = "Practical serializable thoroughly tested CRDTs (ORSWOT, counters, LWW) ported from riak_dt"
version = "5.1.0"
authors = ["Tyler Neely <t@jujit.su>", "David Rusu <davidrusu.me@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rust-crdt/rust-crdt"
repository = "https://github.com/rust-crdt/rust-crdt"
documentation = "https://docs.rs/crdts"
keywords = ["crdt", "data-structures", "distributed-systems", "vector-clock", "riak"]
edition = "2018"

[[test]]
name = "test"
path = "test/test.rs"

[dependencies]
num = {version = "0.3.1", features = ["serde"]}
serde = { version = "~1.0.91", features = ["derive"] }
rand = "0.7"
bitvec = { version = "0.17", features = ["serde"] }
quickcheck = "0.9"

[dev-dependencies]
quickcheck_macros = "0.9"
derive_more = "0.99"

[profile.release]
debug = true
