[package]
name = "crdts"
description = "Practical, serializable, thoroughly tested CRDTs"
version = "7.3.0"
authors = ["Tyler Neely <t@jujit.su>", "David Rusu <davidrusu.me@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rust-crdt/rust-crdt"
repository = "https://github.com/rust-crdt/rust-crdt"
documentation = "https://docs.rs/crdts"
keywords = ["crdt", "data-structures", "distributed-systems", "vector-clock", "riak"]
edition = "2021"
resolver = "2"

[[test]]
name = "test"
path = "test/test.rs"

[features]
default = ["quickcheck", "num", "merkle"]
quickcheck = ["dep:quickcheck"]
num = ["dep:num"]
merkle = ["dep:tiny-keccak"]

[dependencies]
serde = { version = "~1.0.91", features = ["derive"] }

# glist, list, pncounter, gcounter
num = {version = "0.4", features = ["serde"], optional = true}

# merkle-reg
tiny-keccak = { version = "2.0.2", features = ["sha3"], optional = true }

# testing
quickcheck = {version = "1.0", optional = true}

[dev-dependencies]
quickcheck_macros = "1.0"
derive_more = "0.99"
rand = "0.8"

[profile.release]
debug = true
